--- a/horizontal-panel/css/style.css
+++ b/horizontal-panel/css/style.css
@@ -8,6 +8,11 @@
 	src: url('../fonts/Reckoner.ttf');
 }
 
+body{
+	background-image: url('img/background-gray.jpg');
+	background-size: cover;
+}
+
 .main{
 	margin: 50px;
 }
